fix: add ReceivedAdditionalDocumentChecksums to RECE responses
